# zap

./: .gitignore  README.md  base.yaml  config.py  config.yaml  config_seg.yaml  data.yaml  data_modules.py  dataset.py  dataset_generator.py  detection.yaml  main.py  models.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
docs/: classification_guide.md  object_detection_guide.md  segmentation_guide.md
src/: base.yaml
src/zap/: __init__.py  base.yaml  callbacks.py  coco_utils.py  converter.py  data_modules.py  formatter.py  utils.py
src/zap/classification/: data_modules.py  dataset.py  models.py
src/zap/object_detection/: data_modules.py  dataset.py  models.py  utils.py
src/zap/segmentation/: data_modules.py  dataset.py  models.py
