[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zap"
version = "0.0.1"
authors = [
  { name="Petar Gyurov", email="petar.gyurov@keen-ai.com" },
]
description = "Simple AI Pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "colorama",
  "opencv-python",
  "lightning".
  "jsonargparse[signatures]",
  "mlflow==2.7.0",
  "pydantic==2.3.0",
  "virtualenv"  # required for mlflow
  "pycocotools"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]