[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zap"
version = "0.0.3-alpha"
authors = [{ name="Petar Gyurov", email="petar.gyurov@keen-ai.com" }]
description = "Simple AI Pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "colorama",
  "google-cloud-storage",
  "jsonargparse[signatures]",
  "lightning==2.0.8",
  "mlflow==2.7.0",
  "omegaconf",
  "opencv-python",
  "psycopg2-binary",
  "pycocotools",
  "python-dotenv",
  "segmentation_models_pytorch",
  "torchvision",
  "virtualenv"  # required for mlflow
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
exclude = [
  ".vscode/"
]
